@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+
 plugins {
     alias(libs.plugins.androidLibrary)
     alias(libs.plugins.jetbrainsKotlinAndroid)
@@ -25,8 +27,10 @@ android {
         targetCompatibility = JavaVersion.VERSION_17
     }
 
-    kotlinOptions {
-        jvmTarget = "17"
+    kotlin {
+        compilerOptions {
+            jvmTarget = JvmTarget.JVM_17
+        }
     }
 }
 
@@ -41,6 +45,10 @@ sonar {
             properties["sonar.cpd.exclusions"].toString() + ",**/VisitedRealmProvider.*"
         )
     }
+}
+
+tasks.withType<Test>().all {
+    jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
 }
 
 dependencies {
